vendor/structopt-0.3.21/tests/ui/struct_parse.stderr
error: `parse` attribute is only allowed on fields
  --> $DIR/struct_parse.rs:12:29
   |
12 | #[structopt(name = "basic", parse(from_str))]
   |                             ^^^^^
